Sutter Health/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ATT_Language_Lines__c</fullName>
        <label>ATT Language Lines</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <formula>IF(Account.RecordType.Name = &apos;SHP Sales Broker&apos;  || Account.RecordType.Name = &apos;SHP Sales Broker Read Only&apos; || Account.RecordType.Name = &apos;SHMMN Broker&apos;, &apos;Broker&apos;,  IF(Account.RecordType.Name = &apos;SHP Sales Employer&apos; || Account.RecordType.Name = &apos;SHP Sales Employer Read Only&apos; || Account.RecordType.Name = &apos;SHMMN Employer&apos; , &apos;Employer&apos;, &apos;&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Admin_Temp_Email__c</fullName>
        <label>Admin Temp Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Archive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Archive_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Archive lookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Archived Contacts</relationshipLabel>
        <relationshipName>Archived_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Behavioral_Health_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Behavioral Health Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BrokerAgent_Date_HIPAA__c</fullName>
        <label>Broker Agent HIPAA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BrokerAgent_License_Date_End__c</fullName>
        <label>Broker Agent License Date End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BrokerAgent_License_Date_Start__c</fullName>
        <label>Broker Agent License Date Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BrokerAgent_License_Number__c</fullName>
        <label>Broker Agent License Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BrokerAgent_License_State__c</fullName>
        <label>Broker Agent License State</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Agent_Date_HIPAA__c</fullName>
        <label>Broker Agent Date HIPAA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Broker_Agent_End_Date__c</fullName>
        <label>Broker Agent End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Broker_Agent_HCC_ID__c</fullName>
        <description>Primary key and best static identifier from HealthRules</description>
        <label>Broker Agent HCC ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Agent_HR_ID__c</fullName>
        <description>Secondary key from HealthRules, used to ensure differentiation from the HCC ID</description>
        <label>Broker Agent HR ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Agent_License_Date_Start__c</fullName>
        <label>Broker Agent License Date Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Broker_Agent_License_HCC_ID__c</fullName>
        <description>Primary key and best static identifier from HealthRules</description>
        <label>Broker Agent License HCC ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Agent_License_HR_ID__c</fullName>
        <description>Secondary key from HealthRules, used to ensure differentiation from the HCC ID</description>
        <label>Broker Agent License HR ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Agent_License_Number__c</fullName>
        <label>Broker Agent License Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Agent_License_State__c</fullName>
        <label>Broker Agent License State</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Agent_Remittance_Type__c</fullName>
        <label>Broker Agent Remittance Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Agent_Sales_Team__c</fullName>
        <label>Broker Agent Sales Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RGA</fullName>
                </value>
                <value>
                    <fullName>PBJ</fullName>
                </value>
                <value>
                    <fullName>TSS</fullName>
                </value>
                <value>
                    <fullName>M2N</fullName>
                </value>
                <value>
                    <fullName>BAY</fullName>
                </value>
                <value>
                    <fullName>SHP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Broker_Agent_Start_Date__c</fullName>
        <label>Broker Agent Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Broker_Agent_Status_HR__c</fullName>
        <label>Broker Agent Status HR</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Agent_Status__c</fullName>
        <label>Broker Agent Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Contracted</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Broker_Agent_Terminate_Reason__c</fullName>
        <label>Broker Agent Terminate Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Broker_Firm_Remittance_Type__c</fullName>
        <label>Broker Firm Remittance Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Firm_Vender_ID__c</fullName>
        <label>Broker Firm Vendor ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_ID_Type__c</fullName>
        <label>Contact TIN Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EIN</fullName>
                </value>
                <value>
                    <fullName>Tax-ID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Broker_Last_Contacted__c</fullName>
        <label>Broker Last Contacted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Broker_Rep__c</fullName>
        <description>This field should come from the Sales Cloud Account field &quot;Broker Rep&quot; which is a lookup. SHP has asked the field be place on the Employer page layout</description>
        <label>Broker Rep</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Type__c</fullName>
        <label>Broker Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Representative</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Management_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Case Management Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Manager__c</fullName>
        <label>Case Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Case_Ref_ID__c</fullName>
        <label>Contact Case Ref ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_External_ID1__c</fullName>
        <description>External ID used to match a contact record to its equivalent record in a source system when updating and/or inserting.</description>
        <externalId>true</externalId>
        <label>Contact External ID 1</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Contact_External_ID2__c</fullName>
        <description>External ID used to match a contact record to its equivalent record in a source system when updating and/or inserting.</description>
        <label>Contact External ID 2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Group_ID__c</fullName>
        <formula>Account.SHP_Group_ID__c</formula>
        <label>Group ID Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Middle_Name__c</fullName>
        <label>Contact Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_SSN_E__c</fullName>
        <description>Last 4 digits of a contact&apos;s SSN.</description>
        <inlineHelpText>Last 4 digits only</inlineHelpText>
        <label>Contact SSN</label>
        <length>4</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Contact</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Benefits</fullName>
                </value>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>CFO</fullName>
                </value>
                <value>
                    <fullName>Facilities</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Old Contact (Not valid anymore)</fullName>
                </value>
                <value>
                    <fullName>Safety</fullName>
                </value>
                <value>
                    <fullName>Wellness</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNISTC__c</fullName>
        <label>DNISTC</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOD__c</fullName>
        <label>DOD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Until_Expiration__c</fullName>
        <formula>IF(
NOT(ISNULL(License_Expiration_Date__c )), 
License_Expiration_Date__c - TODAY(), null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Until Expiration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deficiency_Provider__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Value in this field will be used to populate the HIM Deficiency Communication preference</description>
        <label>Deficiency Provider?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked it indicates this as a duplicate contact.</description>
        <inlineHelpText>When checked, it indicates this as a duplicate contact.</inlineHelpText>
        <label>Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Alert__c</fullName>
        <defaultValue>&quot;NO&quot;</defaultValue>
        <description>PDV Email Alert Flag for Email Change</description>
        <label>Email Alert</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emp_Id__c</fullName>
        <description>Emp Id for SER(Contact : Provider) search</description>
        <label>Emp Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_ADID__c</fullName>
        <label>Employee ADID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Adjusted_Hire_Date__c</fullName>
        <label>Employee Adjusted Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Affiliate_Facility__c</fullName>
        <label>Employee Affiliate Facility</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Affiliate_HireDate__c</fullName>
        <label>Employee Affiliate Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Anniversary_Date__c</fullName>
        <label>Employee Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Bargaining_Union__c</fullName>
        <label>Employee Bargaining Unit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Company__c</fullName>
        <description>Internal Sutter company ID code.</description>
        <label>Employee Company</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Department__c</fullName>
        <label>Employee Department</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_EEO_SubCode__c</fullName>
        <label>Employee EEO SubCode</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_ESL_Balance__c</fullName>
        <label>Employee ESL Balance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_Email__c</fullName>
        <description>Lawson employee personal email addresss ... unverified</description>
        <label>Employee Email</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Employment_Status__c</fullName>
        <label>Employee Employment Status</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Executive_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employee Executive Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Exempt_non_exempt_Status__c</fullName>
        <label>Employee Exempt/non-exempt Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Exempt_nonexempt_Status__c</fullName>
        <label>Employee Exempt/nonexempt Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_FTE__c</fullName>
        <label>Employee FTE</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <label>Employee ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Job_Code_Description__c</fullName>
        <label>Employee Job Code Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Job_Code__c</fullName>
        <label>Employee Job Code</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Location__c</fullName>
        <label>Employee Location</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_PTO_Balance__c</fullName>
        <label>Employee PTO Balance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_Pay_Rate__c</fullName>
        <label>Employee Pay Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_Process_Level__c</fullName>
        <label>Employee Process Level</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Reason01__c</fullName>
        <label>Employee Reason 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Region__c</fullName>
        <label>Employee Region</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Seniority_Date__c</fullName>
        <description>Employee Seniority Date from Lawson.</description>
        <label>Employee Seniority Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Supervisor_Code__c</fullName>
        <label>Employee Supervisor Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Supervisor_Name__c</fullName>
        <label>Employee Supervisor Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Termination_Date__c</fullName>
        <label>Employee Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Union_Affiliate__c</fullName>
        <label>Employee Union Affiliate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Work_Email__c</fullName>
        <label>Employee Work Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employer_Contact_FullName__c</fullName>
        <label>Employer Contact Full Name</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Contact_HCC_ID__c</fullName>
        <description>Primary key and best static identifier from HealthRules</description>
        <label>Employer Contact HCC ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Contact_HR_ID__c</fullName>
        <description>Secondary key from HealthRules, used to ensure differentiation from the HCC ID</description>
        <label>Employer Contact HR ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Contact_Telephone_Number__c</fullName>
        <label>Contact Phone Numbers</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Employer_Date_First_Active__c</fullName>
        <description>Field added to Employer Contact during SHP UAT Release 1 explained the field exist in HR</description>
        <label>First Active Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employer_Date_First_Renewal__c</fullName>
        <description>Field added to Employer Contact during SHP UAT Release 1 explained the field exist in HR</description>
        <label>First Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employer_Date_Next_Renewal__c</fullName>
        <description>Field added to Employer Contact during SHP UAT Release 1 explained the field exist in HR</description>
        <label>Next Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employer_HCC_ID__c</fullName>
        <description>Field added to Employer Contact during SHP UAT Release 1 explained the field exist in HR</description>
        <label>Employer Group ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Type__c</fullName>
        <label>Employer Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>President</fullName>
                </value>
                <value>
                    <fullName>HR/Benefits Coordinator</fullName>
                </value>
                <value>
                    <fullName>Representative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Endangerment_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Endangerment Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>External ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Activation_Date__c</fullName>
        <label>First Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Log_Entry__c</fullName>
        <label>First Log Entry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HIPAA_Rights_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HIPAA Rights Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthRules_ID__c</fullName>
        <externalId>true</externalId>
        <label>HealthRules HCC ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identify_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Identify Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Individual_Broker_ID__c</fullName>
        <label>Individual Broker ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Information_source__c</fullName>
        <label>Information Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Provider_Email__c</fullName>
        <label>Internal Provider Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Communication_Preference_changed__c</fullName>
        <label>Changed to Fax</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Portal_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Portal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Expiration_Date__c</fullName>
        <label>License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Number__c</fullName>
        <label>License Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MHO_Activation__c</fullName>
        <label>MHO Activation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not in Epic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <description>This field is using in  req no 3236</description>
        <formula>MailingStreet &amp; &quot; &quot; &amp; Member_Address_City__c  &amp; &quot; &quot; &amp; Member_Address_State__c &amp; &quot; &quot; &amp; Member_Address_Zip__c &amp; &quot; &quot; &amp; Member_Address_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_County__c</fullName>
        <label>Mailing County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Sales_Primary_Contact_Name__c</fullName>
        <formula>Account.Marketing_and_Sales_Primary_Contact_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing and Sales Primary Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_and_Sales_Primary_Contact_Nam__c</fullName>
        <formula>Account.Marketing_and_Sales_Primary_Contact_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing and Sales Primary Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberIdField__c</fullName>
        <description>This field is used by customization updated by a workflow rule.</description>
        <label>MemberIdField</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Account_Type__c</fullName>
        <label>Member Account Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Address_City__c</fullName>
        <label>Member Address City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Address_Country__c</fullName>
        <label>Member Address Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Address_State__c</fullName>
        <label>Member Address State</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Address_Zip__c</fullName>
        <label>Member Address Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Alert_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Member Alert Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Benefit_Coverage_HCC_ID__c</fullName>
        <description>Primary key and best static identifier from HealthRules</description>
        <label>Member Benefit Coverage HCC ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Benefit_Coverage_HR_ID__c</fullName>
        <description>Secondary key from HealthRules, used to ensure differentiation from the HCC ID</description>
        <label>Member Benefit Coverage HR ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Benefit_Plan_HCC_ID__c</fullName>
        <description>Primary key and best static identifier from HealthRules</description>
        <label>Member Benefit Plan HCC ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Benefit_Plan_HR_ID__c</fullName>
        <description>Secondary key from HealthRules, used to ensure differentiation from the HCC ID</description>
        <label>Member Benefit Plan HR ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Case_Mgmnt_Flag__c</fullName>
        <label>Member Case Management Active</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_DOD__c</fullName>
        <label>Member DOD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Date_Death__c</fullName>
        <label>Date Death</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Dependent_Status__c</fullName>
        <label>Member Dependent Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Effective_Date__c</fullName>
        <label>Member Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_EmployerSub_Name__c</fullName>
        <description>Employer subsidiary name.</description>
        <label>Member Employer-Sub Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Employer_HCC_ID__c</fullName>
        <label>Member Employer HCC ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Employer_HR_ID__c</fullName>
        <description>Secondary key from HealthRules, used to ensure differentiation from the HCC ID</description>
        <label>Member Employer HR ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Employer_ID__c</fullName>
        <label>Member Employer ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Employer_Name__c</fullName>
        <label>Member Employer Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Employer_Sub_HCC_ID__c</fullName>
        <description>Primary key and best static identifier from HealthRules</description>
        <label>Member Employer-Sub HCC ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Employer_Sub_HR_ID__c</fullName>
        <label>Member Employer-Sub HR ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Fax__c</fullName>
        <label>Member Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Member_Group_Affiliation__c</fullName>
        <label>Member Group Affiliation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_HCC_ID__c</fullName>
        <description>Primary key and best static identifier from HealthRules</description>
        <label>Member HCC ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_HIPAA_Indicator__c</fullName>
        <label>Member HIPAA Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_HR_ID__c</fullName>
        <description>Secondary key from HealthRules, used to ensure differentiation from the HCC ID</description>
        <label>Member HR ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <label>Member ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Member_Language__c</fullName>
        <label>Member Language</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Marital_Status__c</fullName>
        <label>Member Marital Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Name_Prefix__c</fullName>
        <label>Member Name Prefix</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>